force-app/main/default/objects/Scoring_Item__c/Scoring_Item__c.object-meta.xml
<CustomObject>
    <label>Scoring Item</label>
    <nameField>
        <label>Scoring Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>