force-app/main/default/objects/Scoring_Item__c/fields/Default_Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Score_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Score Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>