force-app/main/default/objects/Scoring_Item__c/fields/Green_Score_From__c.field-meta.xml
<CustomField>
    <fullName>Green_Score_From__c</fullName>
    <label>Green Scoring Range From</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>