force-app/main/default/objects/Scoring_Item__c/fields/Scoring_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Field_API_Name__c</fullName>
    <label>Scoring Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>