force-app/main/default/objects/Scoring_Item__c/fields/Scoring_Model__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Model__c</fullName>
    <label>Scoring Model</label>
    <referenceTo>Scoring_Model__c</referenceTo>
    <relationshipLabel>Scoring Items</relationshipLabel>
    <relationshipName>Scoring_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>