force-app/main/default/objects/Scoring_Item__c/fields/Scoring_Weight__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Weight__c</fullName>
    <label>Scoring Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>